# MPV-GP

./: CMakeLists.txt  README.md
.github/workflows/: build_win.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h  mpvwidget.cpp  mpvwidget.h
